@@ -58,8 +58,6 @@ public:
 	float    get_max_dsp_load();
 	void     reset_max_dsp_load();
 
-	jack_client_t* client() { return _client; }
-
 	jack_nframes_t sample_rate() { return jack_get_sample_rate(_client); }
 	jack_nframes_t buffer_size();
 	bool           set_buffer_size(jack_nframes_t size);
